--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-warning-subtle">
+        <nav class="navbar navbar-expand-lg bg-warning-subtle fixed-top">
             <div class="container-fluid w-75">
               <a class="navbar-brand" href="#"><img src="icons/logo.png" alt="Bootstrap" width="192" height="26">
               </a>
@@ -39,9 +39,9 @@
           </nav>
     </header>
     <main>
-        <section class=" pb-5 bg-warning-subtle">
-            <div class="container w-75 pb-5">
-                <div class="row d-flex align-items-center">
+        <section class=" pb-5 bg-warning-subtle mt-5">
+            <div class="container w-75 pb-5 mt-5">
+                <div class="row d-flex align-items-center justify-content-md-center">
                     <div class="col col-lg-6 col-md-12">
                         <h1 class="text-warning fw-bold">BE THE PENGUINS <br>
                             <span style="color: darkblue;">OF WINTER</span></h1>
@@ -60,9 +60,9 @@
         </section>
 
         <section class="mb-5">
-           <div class="container w-75 mb-3">
+           <div class="container w-75 mb-3 mx-auto">
              <h3 class="fw-bold my-3" style="color: #363958;">WOMAN JACKET</h3>
-             <div class="row g-4">
+             <div class="row g-4 justify-content-md-center">
                 <div class="col col-lg-4 col-md-12">
                     <div class="card shadow-lg border border-0" style="width: 18rem;">
                         <img class="bg-body-secondary rounded-3 mt-2 ms-2 me-2 py-2 " src="images/jacket-1.png" class="card-img-top" alt="...">
@@ -117,10 +117,10 @@
              </div>
            </div>
         </section>
-        <section>
-           <div class="container w-75">
+        <section class="my-5">
+           <div class="container w-75 mb-5 mx-auto">
              <h3 class="fw-bold my-3" style="color: #363958;">MAN JACKET</h3>
-             <div class="row g-4">
+             <div class="row g-4 justify-content-md-center">
                 <div class="col col-lg-4 col-md-12">
                     <div class="card shadow-lg border border-0" style="width: 18rem;">
                         <img class="bg-body-secondary rounded-3 mt-2 ms-2 me-2 py-2 " src="images/jacket-4.png" class="card-img-top" alt="...">
@@ -175,9 +175,53 @@
              </div>
            </div>
         </section>
-    </main>
-    <footer>
 
+        <section class="my-5 ">
+            <div class="container my-5 w-75">
+                <div class="row justify-content-md-center">
+                    <div class="col">
+                        <div class="row g-4">
+                            <div class="col col-lg-12 d-flex">
+                                <div>
+                                    <img src="icons/house.png" alt="" width="78" height="82">
+                                </div>
+                                <div class="ms-4">
+                                    <h5 class="fw-bold">Find the Perfect Fit</h5>
+                                    <p>Everybody is different, which is why we
+                                    offer styles for every body.</p>
+                                </div>
+                            </div>
+                            <div class="col col-lg-12 d-flex">
+                                <div>
+                                    <img src="icons/box.png" alt="" width="79" height="76">
+                                </div>
+                                <div class="ms-4">
+                                    <h5 class="fw-bold">Free Exchanges</h5>
+                                    <p>One of the many reasons you can shop
+                                    with peace of mind.</p>
+                                </div>
+                            </div>
+                            <div class="col col-lg-12 d-flex">
+                               <div>
+                                <img src="icons/question.png" alt="" width="79" height="76">
+                               </div>
+                                <div class="ms-4">
+                                    <h5 class="fw-bold"> Contact Our Seller</h5>
+                                    <p> They are here to help you. That's quite 
+                                    literally what we pay them for.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <img src="images/shopping.png" alt="" width="320" height="200">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="my-5">
+        <p class="text-center fw-bold">Copyright 2024 | All Right Reserved</p>
     </footer>
     <!-- bootstrap-js-link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
